--- a/coffee-house/style/media.css
+++ b/coffee-house/style/media.css
@@ -281,6 +281,10 @@
   left: 0;
 }
 
+.overflow-body {
+  overflow: hidden;
+}
+
 .cross-btn .nav-btn-mobile-equal__first {
   transform: rotate(45deg);
 }
